[package]
name = "cli-invoice"
version = "0.1.0"
edition = "2021"
author = "David Hough"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0",  features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
headless_chrome = "1.0.5"
handlebars = "4.3.7"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
printpdf = "0.5.0"
urlencoding = "2.1.2"
tokio = { version = "1.13.0", features = ["full"] }
clap = { version = "4.3.19", features = ["derive"] }
text-colorizer = "1"
dirs = "5.0.1"
dotenvy = "0.15"
cli-table = "0.4"
base64 = "0.21.2"
chrono = "0.4.19"
indexmap = "2.0.0"
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }


[features]
windows = ["libsqlite3-sys/bundled"]



